feat: Service 롬복 적용