@@ -23,12 +23,13 @@ import com.bang_ggood.room.domain.Room;
 import com.bang_ggood.room.dto.response.SelectedRoomResponse;
 import com.bang_ggood.room.service.RoomService;
 import com.bang_ggood.user.domain.User;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Service
 public class ChecklistManageService {
 
@@ -38,19 +39,6 @@ public class ChecklistManageService {
     private final ChecklistQuestionService checklistQuestionService;
     private final ChecklistMaintenanceService checklistMaintenanceService;
     private final ChecklistLikeService checklistLikeService;
-
-    public ChecklistManageService(RoomService roomService, ChecklistService checklistService,
-                                  ChecklistOptionService checklistOptionService,
-                                  ChecklistQuestionService checklistQuestionService,
-                                  ChecklistMaintenanceService checklistMaintenanceService,
-                                  ChecklistLikeService checklistLikeService) {
-        this.roomService = roomService;
-        this.checklistService = checklistService;
-        this.checklistOptionService = checklistOptionService;
-        this.checklistQuestionService = checklistQuestionService;
-        this.checklistMaintenanceService = checklistMaintenanceService;
-        this.checklistLikeService = checklistLikeService;
-    }
 
     @Transactional
     public Long createChecklist(User user, ChecklistRequest checklistRequest) {
@@ -208,7 +196,7 @@ public class ChecklistManageService {
                 checklistRequest.room().includedMaintenances().stream()
                         .map(maintenanceId -> new ChecklistMaintenance(checklist,
                                 MaintenanceItem.fromId(maintenanceId)))
-                        .collect(Collectors.toList());
+                        .toList();
         checklistMaintenanceService.updateMaintenances(checklist.getId(), checklistMaintenances);
     }
 }
